[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "num2words>=0.5.14",
    "openai>=1.61.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.2.5",
    "streamlit>=1.41.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
]
